<resources>
    <string name="app_name">PracticAndroid9</string>
    <string name="add">Добавить</string>
    <string name="delete">Удалить</string>
    <string name="edit">Редактировать</string>
    <string name="sort">Сортировать</string>
    <string name="search">Найти</string>
    <string name="show">Показать</string>
    <string name="productName">Покупка</string>
    <string name="count">Кол-во</string>
    <string name="price">Стоимость</string>
    <string name="dateOfBuy">Дата</string>
    <string name="ProductName">Покупка: %s</string>
    <string name="Count">Кол-во: %d</string>
    <string name="Price">Стоимость: %.2f</string>
    <string name="DateOfBuy">Дата: %s</string>
    <string name="addNew">Добавить</string>
    <string name="ok">OK</string>
    <string name="Error">Ошибка!</string>
    <string name="ErrorField">Неправильно заполнены поля, попробуйте снова</string>
    <string name="ChooseAction">Выберите действие</string>
    <string name="cancel">отмена</string>
    <string name="editProductName">%s</string>
    <string name="editCount">%d</string>
    <string name="editPrice">%.2f</string>
    <string name="ToolbarTitle">Покупки</string>
    <string name="sortProduct">Сортировать по названию</string>
    <string name="sortCount">Сортировать по количеству</string>
    <string name="sortPrice">Сортировать по цене</string>
    <string name="sortDate">Сортировать по дате</string>
    <string name="clearList">Очистить весь список</string>
    <string name="defaultList">По умолчанию</string>
    <string name="Yes">Да</string>
    <string name="No">Нет</string>
    <string name="Confirm">Подтвердите действие</string>
    <string name="ConfirmMessage">Вы уверены, что хотите очистить весь список?</string>
    <string name="NoProducts">Нет покупок по вашему запросу</string>
    <string name="EmptyList">Ваш список пуст. Добавить покупки можно нажав на +</string>
</resources>