<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".AddEditElementActivity">

    <EditText
        android:id="@+id/productName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/productName"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text=""
        android:textColorHint="#8d99ae"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="100dp" />

    <EditText
        android:id="@+id/count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/count"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text=""
        android:textColorHint="#8d99ae"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        tools:layout_editor_absoluteX="100dp" />

    <EditText
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/price"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text=""
        android:textColorHint="#8d99ae"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
        tools:layout_editor_absoluteX="100dp" />

    <Button
        android:id="@+id/AddElem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/addNew"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"
        tools:layout_editor_absoluteX="147dp" />
</LinearLayout>